2024-01-12T00:27:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7496216200 # 15
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 93 196
* notice: prev accum: outdated-unq outdated-all / unq all: 1468 3421 / 1609 3625
* notice: next accum: outdated-unq outdated-all / unq all: 1472 3429 / 1609 3625
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-28] / []

2024-01-11T16:06:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7491391521 # 14
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 94 200
* notice: prev accum: outdated-unq outdated-all / unq all: 1468 3421 / 1603 3615
* notice: next accum: outdated-unq outdated-all / unq all: 1468 3421 / 1609 3625
* notice: prev exec diff / last date diff / accum: unq all: +6 +10 -1 -2 / +16 +24 -0 -0 / 16 24
* notice: removed / changed dates: [] / [2023-12-28 2024-01-11]

2024-01-11T08:08:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7485899587 # 13
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 90 192
* notice: prev accum: outdated-unq outdated-all / unq all: 1468 3421 / 1593 3601
* notice: next accum: outdated-unq outdated-all / unq all: 1468 3421 / 1603 3615
* notice: prev exec diff / last date diff / accum: unq all: +10 +14 -1 -2 / +10 +14 -0 -0 / 10 14
* notice: removed / changed dates: [] / [2023-12-28 2024-01-11]

2024-01-11T00:27:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7482491195 # 12