@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-12T00:27:19Z",
+  "timestamp" : "2024-01-12T08:07:36Z",
   "count_outdated" : 3429,
   "uniques_outdated" : 1472,
-  "count" : 3625,
-  "uniques" : 1609,
+  "count" : 3626,
+  "uniques" : 1610,
   "clones" : [
     {
       "timestamp": "2023-12-29T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 16,
       "uniques_minmax": [ 10, 16 ],
       "uniques_decinc": [ 0, 16 ]
+    },
+    {
+      "timestamp": "2024-01-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
