@@ -1,5 +1,5 @@
 {
-  "count": 196,
+  "count": 197,
   "uniques": 93,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2024-01-11T00:00:00Z",
       "count": 24,
       "uniques": 16
+    },
+    {
+      "timestamp": "2024-01-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
